# code_quality_inspector

./: .gitignore  .pylintrc  README.md  api_docs.html  index.html  pyproject.toml
.github/: CONTRIBUTING.md
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml  deploy_pages.yml  pylint.yml  pytest.yml
code_quality_inspector/: log.py
code_quality_inspector/app/: coverage_router.py  endpoints.py  errors.py  main.py  middlewares.py  webhook_router.py
code_quality_inspector/config/: config.py
code_quality_inspector/db_connector/: dynamodb.py
code_quality_inspector/github_connector/: comment_to_pr.py  github_init.py  github_utils.py
code_quality_inspector/reporting/: report_interface.py
code_quality_inspector/reporting/coverage/: coverage_parser.py  coverage_reporting.py
code_quality_inspector/reporting/coverage/data_model/: __init__.py  coverage_file_model.py  coverage_model.py
cqi/: log.py
cqi/app/: coverage_router.py  errors.py  main.py  middlewares.py  webhook_router.py
cqi/config/: config.py  config.toml
cqi/db_connector/: dynamodb.py
cqi/github_connector/: comment_to_pr.py  github_init.py  github_utils.py
cqi/reporting/: report_interface.py
cqi/reporting/coverage/: coverage_parser.py  coverage_reporting.py  message_utils.py
cqi/reporting/coverage/data_model/: __init__.py  coverage_model.py
tests/: common_asserts.py  testing_utils.py
tests/api_functional_tests/: conftest.py  test_coverage.py  test_coverage_endpoint.py
tests/api_functional_tests/data/: main_test_cov.xml
tests/unit_tests/: test_comment_pr.py  test_config.py
tests/unit_tests/data/: config_test.toml
tests/unit_tests/reporting/coverage/: test_coverage.py
