[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]
[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Path", "fastapi.Form", "fastapi.File"]

[tool.poetry]
name = "code-quality-inspector"
version = "0.1.0"
description = ""
authors = ["Zoltan Dominguez <zoltan.dominguez@gmail.com>"]
readme = "README.md"
packages = [{include = "code_quality_inspector"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "~0.95.1"
httpx = "*"
python-multipart = "*"
uvicorn = "~0.22.0"
xmltodict = "~0.13.0"
boto3 = ">=1.26.129"
botocore = "*"
PyGithub = "~1.58.1"
tomli = "~2.0.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pylint = "*"
ruff = "*"

pytest = "*"
pytest-cov = "*"
pytest-html = "*"
pytest-random-order = "*"
requests = "*"
coverage = "*"
